--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Jack's Portfolio</title>
+    <link rel="stylesheet" href="style.CSS">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#design-thinking">Design Process</a></li>
+            <li><a href="#global-goal">Global Goal</a></li>
+            <li><a href="#accessibility">Accessibility</a></li>
+        </ul>
+    </nav>
 
+    <main id="home">
+        <h1>Jack's Portfolio</h1>
+        <img src="https://th.bing.com/th/id/OIP.76_k0KksQs2pCn0Sg9pr4gHaEK?rs=1&pid=ImgDetMain" alt="Jack's Profile">
+        <p>Hi! I'm Jack, an 11th grade student taking a Computer Science 12 course. I'm learning web development basics.</p>
+    </main>
+
+    <section id="portfolio">
+        <h2>My Portfolio</h2>
+        <ul>
+            <li>Playing Hockey 🏒 -  I play hockey for 2 years. I learn teamwork in this sport. We practice together and help each other to win games.</li>
+            <li>Playing Chess ♟️ - I play it to relax and feel less stressed. I often play with family or friends at home. We take time to think and enjoy the game together. It is fun and helps me release the stress.</li>
+            <li>Playing Football ⚽ - Football is my favorite sport. I play it to stay active. I like running and kicking the ball with my friends. It makes me strong and happy.</li>
+        </ul>
+    </section>
+
+    <section id="design-thinking">
+        <h2>Design Thinking Process</h2>
+        <p>I followed these steps:</p>
+        <ol>
+            <li>Empathize: Thought about what visitors want to see.</li>
+            <li>Define: Decided to show hobbies and future goals.</li>
+            <li>Prototype: I make simple pages with HTML and CSS. I use easy colors and big headings. The pages look clean.</li>
+            <li>Test: Asked friends for feedback on layout, when I finished, I got a sense of achievement and satisfaction.</li>
+        </ol>
+    </section>
+    <section id="global-goal">
+        <h2>UN Global Goal: Quality Education (Goal 4)</h2>
+        <p>Some kids can't go to school or get good lessons. Technology can help. For example, online classes can bring learning to far places. I hope all kids can go to school and learn happily.</p>
+        <img src="https://th.bing.com/th/id/R.f977bd93863e29fa2eac237936e2e935?rik=QcupRXgcC3rbBg&riu=http%3a%2f%2fimg1.voc.com.cn%2fUpLoadFile%2f2018%2f01%2f09%2f20180109105953388.jpg&ehk=1KMP72VV8joMZcAkz13a4MACibgcyDjPVg%2ffQ2oOxhw%3d&risl=&pid=ImgRaw&r=0" alt="Modernized education">
+    </section>
+
+    <section id="accessibility">
+        <h2>Accessibility Features</h2>
+        <ul>
+            <li>I use short sentences and easy words. So everyone can read and understand my website.</li>
+            <li>The buttons on my site are big. They are easy to click. I put them in order, so visitors can find pages quickly.</li>
+        </ul>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
